--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
